# Brazilian-eCommerce

./: .env  .gitignore  README.md  config.sh  docker-compose.yaml  pyproject.toml
extraction/script__kaggle/: Dockerfile  build.sh  kaggle_connector.py  main.py  pyproject.toml
extraction/script__kaggle/.kaggle/: kaggle.json
infra/: docker-compose.yaml
transform/brazecom/: dbt_project.yml
transformation/brazecom/: Dockerfile  pyproject.toml
