[tool.poetry]
name = "brazilian-ecommerce"
version = "0.1.0"
description = ""
authors = ["Gabriel Bossardi"]
readme = "README.md"
packages = [{include = "brazilian_ecommerce"}]

[tool.poetry.dependencies]
python = "3.10.8"
dbt-postgres = "1.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
